2010-10-29  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Do not propagate compressed data to dates in the
	  future to make the baseline clearer.

2010-10-29  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/dbmanager.php, godmode/agentes/module_manager_editor.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_copy_modules.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_operations.php,
	godmode/massive/massive_delete_profiles.php,
	godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_action_alerts.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_add_profiles.php,
	godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_edit_modules.php,
	godmode/massive/massive_standby_alerts.php,
	godmode/massive/massive_add_action_alerts.php:  now in the source code pick
	more info in the audit for actions.
	
	Pending tasks: #3089687

2010-10-29  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/massive/massive_delete_profiles.php: fixed result message of
	operation. And cleaned source code style.

2010-10-28  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php, godmode/alerts/alert_actions.php,
	godmode/alerts/alert_commands.php: now in the source code pick more info in
	the audit for actions to create, update and delete profiles and user, and
	for action to add and remove profiles to user.

2010-10-28  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/jquery.ui.datepicker.js, include/javascript/jquery.js,
	include/javascript/jquery.ui.core.js,
	include/javascript/tiny_mce/tiny_mce_popup.js,
	include/javascript/OpenLayers/OpenLayers.js,
	include/javascript/jquery.ui.resizable.js,
	include/javascript/jquery.timeentry.js: : delete unpacked source code of js.
	